syntax = "proto3";

option go_package = "grpc/proto";

package logistics;

import "google/protobuf/empty.proto";
// Mensajes utilizados para la comunicación

// Mensaje para los paquetes enviados por las facciones (clientes)
message PackageOrder {
    string id_paquete = 1;
    string faccion = 2; // Ostronitas o Grineer
    string tipo_paquete = 3; // Normal, Prioritario, Ostronitas
    string nombre_suministro = 4;
    int32 valor_suministro = 5;
    string destino = 6;
}

// Respuesta con el código de seguimiento de una orden
message OrderResponse {
    string codigo_seguimiento = 1;
    string mensaje = 2; // Mensaje de éxito o error
}

// Solicitud para obtener el estado de un paquete
message TrackingRequest {
    string codigo_seguimiento = 1;
}

// Respuesta con el estado actual del paquete
message TrackingResponse {
    string estado = 1; // Ej: En camino, Entregado, No Entregado
    string id_caravana = 2;
    int32 intentos = 3;
}

// Mensaje para las caravanas que indica los detalles de la entrega
message DeliveryInstruction {
    string id_paquete = 1;
    string tipo_caravana = 2; // Ostronitas, General
    string warframe_escolta = 3;
    string destino = 4;
    string tipo_paquete = 5;
    string seguimiento = 6;
    int32 valor = 7;
}

// Mensaje de confirmación de la caravana
message DeliveryStatus {
    string id_paquete = 1;
    string estado = 2; // Entregado, No Entregado
    int32 intentos = 3;
}


// Servicios utilizados para la comunicación

// Servicio entre Facciones y el Sistema Logístico
service LogisticsService {
    // Facciones envían una orden al sistema logístico
    rpc SendOrder(PackageOrder) returns (OrderResponse);

    // Facciones pueden consultar el estado de un paquete
    rpc CheckOrderStatus(TrackingRequest) returns (TrackingResponse);
}

// Servicio entre el Sistema Logístico y las Caravanas
service CaravanService {
    // El sistema logístico envía instrucciones de entrega a las caravanas
    rpc AssignDelivery(DeliveryInstruction) returns (DeliveryStatus);

    // Las caravanas reportan el estado de las entregas
    rpc ReportDeliveryStatus(DeliveryStatus) returns (google.protobuf.Empty);
}

